# apksig-cpp

./: .gitmodules  CMakeLists.txt  main.cpp
include/apksig/: apksig.hpp
src/: apksig.cpp
